# wizard_engine

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  LICENSE.md  README  README.md  a.out  aarch64-android.toolchain.cmake  aarch64-linux.toolchain.cmake  android.sh  android.toolchain.cmake  armv7-android.toolchain.cmake  build.bat  build.sh  cbuild  check.txt  compile_flags.txt  ezgit  gitignore.sh  gitpush.sh  gitrevert.sh  note.txt  release.sh  skeleton.html  valgrind.sh  x86-android.toolchain.cmake  x86-emscripten.toolchain.cmake  x86_64-android.toolchain.cmake  x86_64-linux.toolchain.cmake  x86_64-windows.toolchain.cmake
.github/workflows/: static.yml
Builds/Linux/: bin.out
Compiled/: SEActor.s  SEActors.s  SEAssets.s  SEAudio.s  SECamera.s  SEColor(s).s  SEEngine.s  SEFlipbook(s).s  SEKeys.s  SEMouse.s  SERender.s  SEText(s).s  SETexture(s).s  SETiming.s  SEVector.s  SEWindow.s  background.s  main.s  player.s
Compiled/ASM/: SEAudio.s  SEEngine.s  SERender.s  SETexture(s).s  main.s
Compiled/Linux/: Pause.s  SEActor.s  SEActors.s  SEAssets.s  SEAudio.s  SECamera.s  SEColor(s).s  SEEngine.s  SEFlipbook(s).s  SEKeys.s  SEMouse.s  SERender.s  SEText(s).s  SETexture(s).s  SETiming.s  SEVector.s  SEWindow.s  WZEActor.s  WZEActors.s  WZEAssets.s  WZEAudio.s  WZECamera.s  WZECollision.s  WZEColor(s).s  WZEEngine.s  WZEFlipbook(s).s  WZEKeys.s  WZEMouse.s  WZEOverlapBox(es).s  WZEOverlapbox(es).s  WZERender.s  WZEText(s).s  WZETexture(s).s  WZEThreads.s  WZETiming.s  WZEVector.s  WZEWindow.s  assets.s  background.s  border.s  (+14 more)
Compiled/Windows/: SEActor.s  SEActors.s  SEAssets.s  SEAudio.s  SECamera.s  SEColor(s).s  SEEngine.s  SEFlipbook(s).s  SEKeys.s  SEMouse.s  SERender.s  SEText(s).s  SETexture(s).s  SETiming.s  SEVector.s  SEWindow.s  WZEActor.s  WZEActors.s  WZEAssets.s  WZEAudio.s  WZECamera.s  WZECollision.s  WZEColor(s).s  WZEEngine.s  WZEFlipbook(s).s  WZEKeys.s  WZEMouse.s  WZEOverlapBox(es).s  WZEOverlapbox(es).s  WZERender.s  WZEText(s).s  WZETexture(s).s  WZEThreads.s  WZETiming.s  WZEVector.s  WZEWindow.s  assets.s  background.s  border.s  bullet.s  (+12 more)
Demo/: assets.cpp  background.cpp  crate.cpp  demo.hpp  flashlight.cpp  game.cpp  main.cpp  player.cpp
Demo/Actors/: Pause.cpp  bullet.cpp  eagle.cpp  pause.cpp  platform.cpp  player.cpp  stats.cpp
Demo/Scenes/: infinite.cpp  inifnite.cpp  menu.cpp  normal.cpp
Legacy/: SEAudio.c  SECamera.c  SECollision.c  SEControl.c  SEEngine.c  SEFlipbook.c  SEInput.c  SEMouse.c  SEParticle.c  SERender.c  SEThread.c  SEVector.c  SlayEngine.h
Legacy/Includes/: NeoTypes.h
Legacy/NeoTypes/: NeoArray.c  NeoConvert.c  NeoFile.c  NeoMemory.c  NeoString.c
Release/Linux (x86_64)/: WZEKeys.hpp
SlayEngine/: SEActor.cpp  SEActors.cpp  SEAssets.cpp  SEAudio.cpp  SECamera.cpp  SEColor(s).cpp  SEControl.cpp  SEEngine.cpp  SEFlipbook(s).cpp  SEInput.cpp  SEKeys.cpp  SEKeys.hpp  SEMouse.cpp  SERender.cpp  SEText(s).cpp  SETexture(s).cpp  SETiming.cpp  SEVector.cpp  SEWindow.cpp  SlayEngine.hpp
SlayEngine/Includes/: NeoTypes++.hpp
Test/: bin.out
WizardEngine/: WZEActor.cpp  WZEActors.cpp  WZEAssets.cpp  WZEAudio.cpp  WZECamera.cpp  WZECollision.cpp  WZEColor(s).cpp  WZEEngine.cpp  WZEEnums.hpp  WZEFlipbook(s).cpp  WZEKeys.cpp  WZEMouse.cpp  WZEOverlapBox(es).cpp  WZEOverlapbox(es).cpp  WZERender.cpp  WZEText(s).cpp  WZETexture(s).cpp  WZEThreads.cpp  WZETiming.cpp  WZEVector.cpp  WZEWindow.cpp  WizardEngine.hpp
WizardEngine/Includes/: NeoTypes++.hpp
android/: local.properties
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
asm/linux/: WZEActor.s  WZEActors.s  WZEAssets.s  WZEAudio.s  WZECamera.s  WZECollision.s  WZEColor(s).s  WZEEngine.s  WZEFlipbook(s).s  WZEKeys.s  WZEMath.s  WZEMouse.s  WZEOverlapbox(es).s  WZERender.s  WZEText(s).s  WZETexture(s).s  WZETiming.s  WZEVector.s  WZEWindow.s  assets.s  border.s  bullet.s  eagle.s  game.s  infinite.s  main.s  menu.s  normal.s  pause.s  platform.s  player.s  stats.s
asm/windows/: WZEActor.s  WZEActors.s  WZEAssets.s  WZEAudio.s  WZECamera.s  WZECollision.s  WZEColor(s).s  WZEEngine.s  WZEFlipbook(s).s  WZEKeys.s  WZEMath.s  WZEMouse.s  WZEOverlapbox(es).s  WZERender.s  WZEText(s).s  WZETexture(s).s  WZETiming.s  WZEVector.s  WZEWindow.s  assets.s  border.s  bullet.s  eagle.s  game.s  infinite.s  main.s  menu.s  normal.s  pause.s  platform.s  player.s  stats.s
demo/: demo.hpp  game.cpp  main.cpp
demo/actors/: platform.cpp
demo/scenes/: normal.cpp
exp/: a.out  core.h  example.cpp  main.cpp
exp/src/: main.cpp
inc/: assets.hpp  common.hpp  engine.hpp  error.hpp  render.hpp  timer.hpp  window.hpp  wizard.hpp
inc/WZC/: WZC_collision.h  WZC_enums.h  WZC_include.h  WZC_input.h  WZC_math.h  WZC_render.h  WizardCore.h
inc/WZE/: WZE_ObjectBox.hpp  WZE_RenderObject.hpp  WZE_Socket.hpp  WZE_TextureBox.hpp  WZE_assets.hpp  WZE_body.hpp  WZE_collider.hpp  WZE_except.hpp  WZE_include.hpp  WZE_math.hpp  WZE_point.hpp  WZE_render.hpp  WZE_socket.hpp  WZE_vector.hpp  compile_flags.txt
inc/WZE_CORE/: CORE_collision.h  CORE_enums.h  CORE_input.h  (+4 more)
include/: WizardEngine.hpp  assets.hpp  common.hpp  engine.hpp  math.hpp  render.hpp  window.hpp
lib/: libSDL2-2.0.so.0  libSDL2_mixer-2.0.so.0
src/: SDL2  WZE  WZEActor.cpp  WZEActors.cpp  WZEAssets.cpp  WZEAudio.cpp  WZECamera.cpp  WZECollision.cpp  WZEEngine.cpp  WZEEnums.hpp  WZEFlipbook(s).cpp  WZEKeys.cpp  WZEMath.cpp  WZEMouse.cpp  WZEOverlapbox(es).cpp  WZERender.cpp  WZEText(s).cpp  WZETexture(s).cpp  WZETiming.cpp  WZEVector.cpp  WZEWindow.cpp  WZE_assets.cpp  WZE_body.cpp  WZE_collider.cpp  WZE_math.cpp  WZE_point.cpp  WZE_vector.cpp  WizardEngine.hpp  animation.cpp  animator.cpp  assets.cpp  audio.cpp  body.cpp  camera.cpp  collider.cpp  composition.cpp  engine.cpp  entity.cpp  error.cpp  exception.cpp  (+12 more)
srv/: server.rs  tcp.rs  udp.rs  utils.rs
test/: WZE  a.out  bin.out  main.cpp
tests/: android.cpp  client.cpp  collision.cpp  convex.cpp  main.cpp  net.cpp  spatial.cpp  text.cpp
tmp/: body.hpp  core.c  core.h
(+143 files in other folders)
