[package]
name = "srv"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "*" }
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
zerocopy = { version = "*" }

[[bin]]
name = "udp"
path = "./srv/udp.rs"

[[bin]]
name = "tcp"
path = "./srv/tcp.rs"
