[package]
name = "srv"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
thiserror = { version = "*" }
tokio = { version = "*", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = { version = "*" }
tracing-subscriber = { version = "*" }
zerocopy = { version = "*" }

[[bin]]
name = "udp"
path = "./srv/udp.rs"

[[bin]]
name = "tcp"
path = "./srv/tcp.rs"
